<resources>
    <string name="app_name">Pensiunap</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login_bn_label">Login</string>
    <string name="sign_up_txt">New User? Sign Up</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_con_password">Re-type Password</string>
    <string name="reg_bn_label">Register</string>

    <string name="main_name">Floating Labels</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
</resources>
