<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.vanard.tutorial.loginapp.RegisterActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:id="@+id/logo"
        android:src="@drawable/logo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_name"
            android:textSize="18dp"
            android:id="@+id/txt1"
            android:layout_alignParentLeft="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt1"
            android:id="@+id/reg_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_email"
            android:textSize="18dp"
            android:id="@+id/txt2"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/reg_name"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt2"
            android:id="@+id/reg_email"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_email"
            android:text="@string/prompt_password"
            android:textSize="18dp"
            android:id="@+id/txt3"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt3"
            android:id="@+id/reg_password"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_password"
            android:text="@string/prompt_con_password"
            android:textSize="18dp"
            android:id="@+id/txt4"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt4"
            android:id="@+id/reg_con_password"
            android:inputType="textPassword" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_bn_label"
            style="?android:textAppearanceSmall"
            android:textColor="@color/textColor"
            android:id="@+id/reg_btn"
            android:layout_below="@+id/reg_con_password"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_selecter"
            android:textStyle="bold"/>

    </RelativeLayout>

</LinearLayout>
